# Manila

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  manilafolder.spec  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: python.yml
src/manilafolder/: README.md  __init__.py  app.py  config.py  db.py  gui.py  ingest.py  logging_utils.py  ocr_correction.py  ocr_patterns.py
tests/: test_ocr_correction.py  test_smoke.py
